compiler-frontend/parsing/tests/snapshots/parser__module_export.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..26
      ModuleHeader@0..25
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..11
          UPPER@7..11 "Main"
        ExportList@11..19
          Annotation@11..12
            TEXT@11..12 " "
          LEFT_PARENTHESIS@12..13 "("
          ExportValue@13..18
            LOWER@13..18 "hello"
          RIGHT_PARENTHESIS@18..19 ")"
        Annotation@19..20
          TEXT@19..20 " "
        WHERE@20..25 "where"
      LAYOUT_START@25..25 ""
      LAYOUT_END@25..25 ""
      Annotation@25..26
        TEXT@25..26 "\n"
      END_OF_FILE@26..26 ""
    ,
    [],
)
