compiler-frontend/parsing/tests/snapshots/parser__module_export_class_error_end.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..47
      ModuleHeader@0..46
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..32
          UPPER@7..32 "ModuleExportClassErro ..."
        ExportList@32..40
          Annotation@32..33
            TEXT@32..33 " "
          LEFT_PARENTHESIS@33..34 "("
          ExportClass@34..39
            CLASS@34..39 "class"
            ERROR@39..39 ""
          RIGHT_PARENTHESIS@39..40 ")"
        Annotation@40..41
          TEXT@40..41 " "
        WHERE@41..46 "where"
      LAYOUT_START@46..46 ""
      LAYOUT_END@46..46 ""
      Annotation@46..47
        TEXT@46..47 "\n"
      END_OF_FILE@47..47 ""
    ,
    [
        ParseError {
            offset: 39,
            position: Position {
                line: 1,
                column: 40,
            },
            message: "Expected UPPER",
        },
    ],
)
