compiler-frontend/parsing/tests/snapshots/parser__module_export_empty.snap
---
source: compiler-frontend/parsing/tests/parser.rs
---
(
    Module@0..21
      ModuleHeader@0..20
        MODULE@0..6 "module"
        Annotation@6..7
          TEXT@6..7 " "
        ModuleName@7..11
          UPPER@7..11 "Main"
        ExportList@11..14
          Annotation@11..12
            TEXT@11..12 " "
          LEFT_PARENTHESIS@12..13 "("
          ERROR@13..13 ""
          RIGHT_PARENTHESIS@13..14 ")"
        Annotation@14..15
          TEXT@14..15 " "
        WHERE@15..20 "where"
      LAYOUT_START@20..20 ""
      LAYOUT_END@20..20 ""
      Annotation@20..21
        TEXT@20..21 "\n"
      END_OF_FILE@21..21 ""
    ,
    [
        ParseError {
            offset: 13,
            position: Position {
                line: 1,
                column: 14,
            },
            message: "Empty export list",
        },
    ],
)
